// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`YouTubeVideo it should render properly with all props assigned 1`] = `
=======
exports[`YouTubeVideo should render with many props assigned 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<YouTube
  className="YouTube-video YouTubeVideo"
  containerClassName=""
  id={null}
  onEnd={[Function]}
  onError={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  onPlaybackQualityChange={[Function]}
  onPlaybackRateChange={[Function]}
  onReady={[Function]}
  onStateChange={[Function]}
  opts={
    Object {
      "height": "450px",
      "width": "875px",
    }
  }
  videoId="12395"
/>
`;

<<<<<<< HEAD
exports[`YouTubeVideo it should render properly with required props assigned 1`] = `
=======
exports[`YouTubeVideo should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<YouTube
  className="YouTubeVideo"
  containerClassName=""
  id={null}
  onEnd={[Function]}
  onError={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  onPlaybackQualityChange={[Function]}
  onPlaybackRateChange={[Function]}
  onReady={[Function]}
  onStateChange={[Function]}
  opts={
    Object {
      "height": "390",
      "width": "640",
    }
  }
  videoId="12345"
/>
`;
<<<<<<< HEAD

exports[`YouTubeVideo it should render properly with some props assigned 1`] = `
<YouTube
  className="YouTube-video YouTubeVideo"
  containerClassName=""
  id={null}
  onEnd={[Function]}
  onError={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  onPlaybackQualityChange={[Function]}
  onPlaybackRateChange={[Function]}
  onReady={[Function]}
  onStateChange={[Function]}
  opts={
    Object {
      "height": "390",
      "width": "640",
    }
  }
  videoId="12395"
/>
`;
=======
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
